css/main.css
body {font-family: Play}

header {background-color: linen}

input.ng-pristine.ng-invalid {background-color: orange}

input.ng-valid.ng-pristine {background-color: lightgreen}

input.ng-invalid.ng-not-empty {background-color: pink}

input.ng-invalid.ng-dirty {background-color: pink}

input.ng-valid.ng-dirty {background-color: lightgreen}

.key {
  width: 66px;
  height: 60px;
  padding: 5px 10px !important;
}

#clearKey{
  width: 198px;
  height: 60px;
  padding: 5px 10px !important;
}

